umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2H-thiete.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "{CH2v2}"
      - "{CHv3}"
      - "{S/2v2}"
      - "{CHv3}"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "{CH2v2}"
      - "{CHv3}"
      - "{S/2v2}"
      - "{CHv3}"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
