umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2H-thiopyran.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom S at index 5 has 3 valence matches: {S/2v2}, {S/1v2a2}, {S+/1v2a1}"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "{CH2v2}"
      - "{CHv3}"
      - "{S/2v2}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CHv3}"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
      - "-"
      - "="
