umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_4H-pyran.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom O at index 0 has 3 valence matches: {O/2v2}, {O/1v2a2}, {O+/1v2a1}"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "{O/2v2}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "="
      - "="
      - "-"
      - "-"
