umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_aziridine.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1H1v2}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1H1v2}"
    bonds:
      - "-"
      - "-"
      - "-"
