umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_hydantoin.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom N at index 0 has 3 valence matches: {NH/1v2}, {NHv2a2}, {N+Hv2a1}"
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOt?
    atoms:
      - "{NH/1v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{Cv4}"
      - "{NH/1v2}"
      - "{O/2v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
      - "="
